--- a/memotec.css
+++ b/memotec.css
@@ -1,30 +1,47 @@
+@font-face {
+  font-family: "Press Start 2P";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/pressstart2p/v15/e3t4euO8T-267oIAQAu6jDQyK3nVivM.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+.container {
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  text-align: center;
+}
+
 /* Estilos para el cuerpo de la página */
 body {
   background-color: #f0f0f0;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh; /* Ocupar toda la altura de la ventana visible */
   text-align: center;
+  background-image: url(fondo.jpg);
 }
 
 /* Estilos para el encabezado */
 .containerHead {
-  background-color: #3498db;
   color: #ffffff;
   padding: 20px;
-  width: 100%;
-  text-align: center;
 }
 
-containerHead h1 {
+.containerHead h1 {
   font-size: 24px;
   margin: 0;
+  font-size: 36px;
+  animation: destello 3s infinite;
+  font-family: "Press Start 2P";
+  background-color: rgb(243, 243, 140);
+  margin: 10px;
   padding: 0;
+  border-radius: 5px;
 }
 
 header {
@@ -32,7 +49,35 @@ header {
 }
 
 header h2 {
-  font-size: 18px;
+  font-size: 20px;
+  margin: 0;
+  animation: destello 3s infinite;
+  font-family: "Press Start 2P";
+  background-color: rgb(243, 243, 140);
+  margin: 10px;
+  padding: 0;
+  border-radius: 5px;
+  opacity: 1;
+}
+/* Estilo base del título h1 */
+
+/* Animación de destello de colores */
+@keyframes destello {
+  0% {
+    color: yellow;
+  }
+  25% {
+    color: #e4d500;
+  }
+  50% {
+    color: rgb(255, 145, 0);
+  }
+  75% {
+    color: rgb(255, 136, 0);
+  }
+  100% {
+    color: #dd0303;
+  }
 }
 
 /* Estilos para el centro de la página */
@@ -42,9 +87,6 @@ header h2 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 20px;
-  width: 100%;
-  text-align: center;
-  flex-grow: 1; /* Para llenar el espacio restante */
 }
 
 button {
@@ -59,9 +101,17 @@ button {
 
 /* Estilos para el pie de página */
 footer {
-  background-color: #3498db;
-  color: #ffffff;
+  background-color: rgb(243, 243, 140);
+  color: blackA;
   padding: 10px;
-  width: 100%;
-  text-align: center;
+  border-radius: 5px;
+}
+
+/* Estilos para los botones en el centro */
+#addGamers {
+  margin: 20px;
+}
+
+#crearObjeto {
+  margin: 20px;
 }
