--- a/memotec.css
+++ b/memotec.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 @font-face {
   font-family: "Press Start 2P";
   font-style: normal;
@@ -19,70 +23,80 @@
 /* Estilos para el cuerpo de la página */
 body {
   background-color: #f0f0f0;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
   text-align: center;
   background-image: url(fondo.jpg);
+}
+/*estiliza los campos que se van creando*/
+#contenedor-campos {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 10px;
+  padding: 2% 40% 2% 40%;
 }
 
 /* Estilos para el encabezado */
 .containerHead {
-  color: #ffffff;
   padding: 20px;
 }
-
-.containerHead h1 {
-  font-size: 24px;
-  margin: 0;
-  font-size: 36px;
-  animation: destello 3s infinite;
+/*Estilo a H1*/
+h1 {
+  margin: 15px;
+  padding: 1%;
   font-family: "Press Start 2P";
-  background-color: rgb(243, 243, 140);
-  margin: 10px;
-  padding: 0;
-  border-radius: 5px;
+  background-color: yellow;
+}
+/*agregado de destellos a h1*/
+
+@keyframes animarLetras {
+  0% {
+    font-size: 10px;
+  }
+  50% {
+    font-size: 20px;
+  }
+  100% {
+    font-size: 10px;
+  }
 }
 
+#brillo {
+  display: inline-block;
+  animation: animarLetras 6s infinite;
+}
 header {
   margin-top: 20px;
 }
 
 header h2 {
-  font-size: 20px;
-  margin: 0;
-  animation: destello 3s infinite;
+  font-size: 18px;
   font-family: "Press Start 2P";
-  background-color: rgb(243, 243, 140);
-  margin: 10px;
-  padding: 0;
+  text-decoration: double;
+  background-color: yellow;
+  padding: 5px 1px;
+  margin: 4%;
   border-radius: 5px;
-  opacity: 1;
 }
-/* Estilo base del título h1 */
-
-/* Animación de destello de colores */
+/*agregar estilo a h2*/
 @keyframes destello {
   0% {
-    color: yellow;
-  }
-  25% {
-    color: #e4d500;
+    opacity: 1;
   }
   50% {
-    color: rgb(255, 145, 0);
-  }
-  75% {
-    color: rgb(255, 136, 0);
+    opacity: 0;
   }
   100% {
-    color: #dd0303;
+    opacity: 1;
   }
+}
+
+#destello {
+  animation: destello 5s infinite;
 }
 
 /* Estilos para el centro de la página */
 .containerCenter {
-  background-color: #ffffff;
+  background-color: tra;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -90,21 +104,24 @@ header h2 {
 }
 
 button {
-  background-color: #3498db;
+  background-color: red;
   color: #ffffff;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  font-family: "Press Start 2P";
 }
 
 /* Estilos para el pie de página */
 footer {
-  background-color: rgb(243, 243, 140);
-  color: blackA;
-  padding: 10px;
-  border-radius: 5px;
+  background-color: #c6c7c7;
+  color: black;
+  font-size: 15px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 /* Estilos para los botones en el centro */
