mas Diseño y fonto de pantalla, funcionalidad al boton comenza

--- a/css/memotec.css
+++ b/css/memotec.css
@@ -139,7 +139,7 @@ button:focus {
   box-shadow: 2px 2px 5px rgb(255, 255, 255);
   background-color: rgb(157, 255, 127);
 }
-/************************diseño pie de***********/
+/************************diseño pie de pagina***********/
 footer {
   background-color: #c6c7c7;
   color: black;
