--- a/css/memotec.css
+++ b/css/memotec.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -173,11 +174,7 @@ button:active {
   box-shadow: 2px 2px 5px rgb(255, 255, 255);
   background-color: rgb(248, 114, 114);
 }
-button:focus {
-  transform: scale(0.95);
-  box-shadow: 2px 2px 5px rgb(255, 255, 255);
-  background-color: rgb(157, 255, 127);
-}
+
 /************************diseño pie de pagina***********/
 footer {
   background-color: #c6c7c7;
@@ -312,7 +309,8 @@ div .emojis .em {
     font-size: 10px;
     position: fixed;
     bottom: 0;
-    width: 100%;
+
+    height: 100vh;
   }
 
   .emojis {
