--- a/css/final.css
+++ b/css/final.css
@@ -19,22 +19,66 @@ body {
   text-align: center;
   font-family: "Press Start 2P";
 }
+/*****Carcateristicas H1****/
 h1 {
   padding: 20px;
   margin-top: 100px;
-  font-size: 40px;
+  font-size: 55px;
+  color: #f6ff00;
+  animation: animarTitulo 5s ease-in-out infinite;
+  -webkit-text-stroke: 2px #000;
 }
+@keyframes animarTitulo {
+  from {
+    clip-path: circle(0%);
+  }
+  to {
+    clip-path: circle(125%);
+  }
+}
+
+/*****Carcateristicas TIMER****/
+
 #timer {
   padding: 20px;
   margin-top: 100px;
   font-size: 30px;
+  animation: animarBrillo 4s linear infinite;
+  text-shadow: 0 0 20px #ff0000;
 }
+@keyframes animarBrillo {
+  20% {
+    text-shadow: 0 0 10px #ff0000, 0 0 20px #ffea00, 0 0 30px #2600ff;
+  }
+  50% {
+    text-shadow: none;
+  }
+  100% {
+    text-shadow: 0 0 10px #ff0000, 0 0 20px #ffea00, 0 0 30px #1e00ff;
+  }
+}
+
+/*****Carcateristicas TIMER****/
 
 #moves {
   padding: 20px;
   margin-top: 60px;
   font-size: 30px;
+  animation: animarBrillo 4s linear infinite;
+  text-shadow: 0 0 20px #ff0000;
 }
+@keyframes animarBrillo {
+  20% {
+    text-shadow: 0 0 10px #ff0000, 0 0 20px #ffea00, 0 0 30px #2600ff;
+  }
+  50% {
+    text-shadow: none;
+  }
+  100% {
+    text-shadow: 0 0 10px #ff0000, 0 0 20px #ffea00, 0 0 30px #1e00ff;
+  }
+}
+
 .volver {
   background-color: #67118c;
   color: #ffffff;
@@ -63,4 +107,46 @@ h1 {
   transform: scale(0.95);
   box-shadow: 2px 2px 5px rgb(255, 255, 255);
   background-color: rgb(248, 114, 114);
+}
+
+/*********************/
+/*ANIMACION DE EMOJIS
+/*********************/
+
+.emojis .em {
+  padding: 30px;
+  margin-top: 90px;
+  margin-left: 20px;
+  margin-right: 20px;
+  animation: emojisAnimados 1s ease-in-out infinite;
+}
+
+@keyframes emojisAnimados {
+  0% {
+    transform: rotate(0deg);
+  }
+  20% {
+    transform: rotate(-20deg);
+  }
+  40% {
+    transform: rotate(40deg);
+  }
+  60% {
+    transform: rotate(-20deg);
+  }
+  80% {
+    transform: rotate(40deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+footer {
+  background-color: #c6c7c7;
+  color: black;
+  font-size: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
