--- a/css/final.css
+++ b/css/final.css
@@ -21,13 +21,13 @@ body {
 }
 /*****Carcateristicas H1****/
 h1 {
-  padding: 20px;
-  margin-top: 100px;
+  margin-top: 10px;
   font-size: 55px;
   color: #f6ff00;
   animation: animarTitulo 5s ease-in-out infinite;
   -webkit-text-stroke: 2px #000;
 }
+
 @keyframes animarTitulo {
   from {
     clip-path: circle(0%);
@@ -40,7 +40,7 @@ h1 {
 /*****Carcateristicas TIMER****/
 
 #timer {
-  padding: 20px;
+  padding: 5px;
   margin-top: 100px;
   font-size: 30px;
   animation: animarBrillo 4s linear infinite;
@@ -85,6 +85,7 @@ h1 {
   border: none;
   padding: 20px;
   margin-top: 30px;
+  margin-bottom: 30px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 10px;
@@ -142,6 +143,10 @@ h1 {
   }
 }
 
+h3 {
+  margin-top: 3px;
+}
+
 footer {
   background-color: #c6c7c7;
   color: black;
@@ -149,4 +154,88 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 7px;
+}
+
+.numeros {
+  padding: 5px;
+  margin: 50px;
+  box-shadow: 0 0 70px rgb(251, 22, 182);
+  background-color: rgba(11, 47, 193, 0.1);
+  border-radius: 20px;
+}
+
+
+/*****************************************************************************************************************************/
+/***********                                          MEDIA QUERY PARA MÓVIL                                      ************/
+/*****************************************************************************************************************************/
+
+/* HORIZONTAL */
+
+@media screen and (min-width: 481px) and (max-width: 767px) and (orientation: landscape){
+  h1 {
+    margin-top: 6vh;
+    margin-bottom: 5vh;
+    font-size: 6vh;
+    -webkit-text-stroke: 0.3vh #000;
+  }
+
+  #timer {
+    margin-top: 3vh;
+    font-size: 3.8vh;
+    text-shadow: 0 0 15px #ff0000;
+  }
+
+  #moves {
+    margin-top: 1px;
+    font-size: 3.8vh;
+    text-shadow: 0 0 15px #ff0000;
+  }
+
+  .emojis .em {
+    padding: 0.5vh;
+    margin-top: 0px;
+  }
+
+  .volver {
+    margin-top: 1vh;
+    margin-bottom: 2vh;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1.8vh;
+    
+  }
+
+  footer {
+    font-size: 1.6vh;
+    position: fixed;
+    height: 3vh;
+  }
+
+  .numeros {
+  margin: 40px;
+  box-shadow: 0 0 40px rgb(251, 22, 182);
+}
+
+}
+
+/***** VERTICAL ****/
+
+@media screen and (min-width:320px) and (max-width: 479px) and (orientation: portrait) {
+  h1 {
+    margin-top: 3vh;
+    font-size: 55px;
+    color: #f6ff00;
+    animation: animarTitulo 5s ease-in-out infinite;
+    -webkit-text-stroke: 2px #000;
+  }
+
+}
+
+/*****************************************************************************************************************************/
+/***********                                         MEDIA QUERY PARA TABLET                                      ************/
+/*****************************************************************************************************************************/
+
+@media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
 }
