--- a/css/final.css
+++ b/css/final.css
@@ -221,14 +221,46 @@ footer {
 
 /***** VERTICAL ****/
 
-@media screen and (min-width:320px) and (max-width: 479px) and (orientation: portrait) {
+@media screen and (min-width:320px) and (max-width: 480px) and (orientation: portrait) {
   h1 {
-    margin-top: 3vh;
-    font-size: 55px;
-    color: #f6ff00;
-    animation: animarTitulo 5s ease-in-out infinite;
-    -webkit-text-stroke: 2px #000;
+    margin-top: 17vh;
+    font-size: 3vh;
+    -webkit-text-stroke: 0.3px #000;
   }
+
+  
+  #timer {
+    padding: 1vh;
+    margin-top: 2vh;
+    font-size: 2vh;
+}
+
+  #moves {
+    padding: 1vh;
+    margin-top: 2vh;
+    font-size: 2vh;
+
+}
+
+  .volver {
+    padding: 2vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    font-size: 1vh;
+}
+
+  .emojis .em {
+    padding: 2vh;
+    margin-top: 3vh;
+    margin-left: 1vh;
+    margin-right: 1vh;
+}
+
+  footer {
+    font-size: 1vh;
+    position: fixed;
+    height: 2vh;
+}
 
 }
 
@@ -237,5 +269,44 @@ footer {
 /*****************************************************************************************************************************/
 
 @media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  h1 {
+    margin-top: 8vh;
+    font-size: 6vh;
+    -webkit-text-stroke: 1px #000;
+  }
+
+  #timer {
+    padding: 1vh;
+    margin-top: 7vh;
+    font-size: 3vh;
+  }
+
+  #moves {
+    padding: 1vh;
+    margin-top: 7vh;
+    font-size: 2.9vh;
+    text-shadow: 0 0 15px #ff0000;
+  }
+
+  .volver {
+    margin-top: 6vh;
+    margin-bottom: 4vh;
+    padding: 3vh;
+    font-size: 1.5vh;
+  }
+
+  .emojis .em {
+    padding: 2vh;
+    margin-top: 3vh;
+    margin-left: 3vh;
+    margin-right: 3vh;
+  }
+
+  footer {
+    font-size: 1.2vh;
+    position: fixed;
+    height: 2.6vh;
+  }
+
 
 }
