--- a/css/memotec.css
+++ b/css/memotec.css
@@ -245,7 +245,6 @@ div .emojis .em {
 /* HORIZONTAL */
 
 @media screen and (min-width: 481px) and (max-width: 767px) and (orientation: landscape) {
-
   h1 {
     margin: 10px;
   }
@@ -318,7 +317,7 @@ div .emojis .em {
   .emojis {
     display: inline;
   }
-  
+
   footer {
     font-size: 10px;
     bottom: 0;
@@ -334,42 +333,47 @@ div .emojis .em {
 /***** VERTICAL ****/
 
 @media screen and (min-width: 320px) and (max-width: 480px) and (orientation: portrait) {
-
   @keyframes animarLetras {
     0% {
-      font-size: 5px;
+      font-size: 2px;
     }
     50% {
-      font-size: 7px;
-    }
-    100% {
       font-size: 5px;
     }
+    100% {
+      font-size: 3px;
+    }
+  }
+
+  header h2 {
+    font-size: 8px;
+    padding: 5px 1px;
+    margin: 10px;
+    border-radius: 5px;
+    text-align: center;
   }
 
   .containerCenter {
-    padding: 40px;
-    margin: 20px;
+    padding: 30px;
+    margin: 10px;
   }
 
   div .emojis .em {
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 
   footer {
-    font-size: 10px;
+    font-size: 7px;
   }
-  }
-
+}
 
 /*****************************************************************************************************************************/
 /***********                                         MEDIA QUERY PARA TABLET                                      ************/
 /*****************************************************************************************************************************/
 
 @media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  
   @keyframes animarLetras {
     0% {
       font-size: 7px;
@@ -381,7 +385,7 @@ div .emojis .em {
       font-size: 7px;
     }
   }
-  
+
   #brillo {
     margin-top: 20px;
   }
@@ -399,5 +403,4 @@ div .emojis .em {
   #addGamers {
     margin: 20px;
   }
-
 }
