--- a/css/stylesGame.css
+++ b/css/stylesGame.css
@@ -215,39 +215,127 @@ li {
   }
 }
 /* resposivness */
-@media screen and (max-width: 650px) {
+/*****************************************************************************************************************************/
+/***********                                          MEDIA QUERY PARA MÓVIL                                      ************/
+/*****************************************************************************************************************************/
+
+/* HORIZONTAL */
+
+@media screen and (min-width: 481px) and (max-width: 767px) and (orientation: landscape) {
+  .game-return-btn {
+    font-size: 7px;
+    padding: 0;
+  }
+  .game-start-btn {
+    font-size: 7px;
+    padding: 0;
+  }
+  .replay {
+    font-size: 7px;
+    padding: 0;
+  }
+  .pointer {
+    font-size: 10px;
+    padding: 0;
+    color: rgb(17, 255, 0);
+  }
   .card {
-    width: 120px;
-    height: 120px;
-    /* margin: 0.3em; */
+    list-style: none;
+    width: 70px;
+    height: 70px;
+    margin: 0.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    perspective: 50px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1);
+    transform-origin: center;
+    transition: all 0.5s;
   }
-  .hide-start-btn {
-    width: 0px;
+  .card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    position: relative;
+    transition: all 0.5s;
+    transform-style: preserve-3d;
   }
-
-  .moji {
-    font-size: 4rem;
-    line-height: 1.7;
-    text-align: center;
+  .deck {
+    margin: 1vh 1vh 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    max-width: 350px;
+    min-height: 300px;
   }
-}
-
-@media screen and (max-width: 525px) {
-  .card {
-    width: 100px;
-    height: 100px;
-  }
-
   .moji {
     font-size: 3rem;
-    line-height: 1.8;
+    line-height: 1.2;
     text-align: center;
   }
 }
+/***** VERTICAL ****/
 
-@media screen and (max-width: 450px) {
+@media screen and (min-width: 320px) and (max-width: 480px) and (orientation: portrait) {
+  .game-return-btn {
+    font-size: 7px;
+    padding: 0;
+  }
+  .game-start-btn {
+    font-size: 6px;
+    padding: 0;
+  }
+  .replay {
+    font-size: 6px;
+    padding: 0;
+  }
+  .pointer {
+    font-size: 8px;
+    padding: 0;
+    color: rgb(17, 255, 0);
+  }
   .card {
-    width: 90px;
-    height: 90px;
+    list-style: none;
+    width: 65px;
+    height: 65px;
+    margin: 0.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    perspective: 50px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.1);
+    transform-origin: center;
+    transition: all 0.5s;
+  }
+  .card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    position: relative;
+    transition: all 0.5s;
+    transform-style: preserve-3d;
+  }
+  .deck {
+    margin: 1vh 1vh 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    max-width: 350px;
+    min-height: 300px;
+  }
+  .moji {
+    font-size: 3rem;
+    line-height: 1.2;
+    text-align: center;
   }
 }
