--- a/css/stylesGame.css
+++ b/css/stylesGame.css
@@ -23,7 +23,7 @@ header {
 body {
   background-image: url(/css/fondo3.jpg);
   background-size: cover;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(3px);
 }
 li {
   list-style: none;
@@ -33,19 +33,20 @@ li {
   opacity: 0;
 }
 .game-start-btn {
-  background-color: #0026fc;
-  color: rgb(251, 255, 0);
+  background-color: #cf92e9;
+  color: #ffffff;
   border: none;
-  padding: 10px 60px;
+  padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
   font-family: "Press Start 2P";
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.3);
   transition: transform 0.2s, box-shadow 0.2s;
-  margin-top: 20px;
-  margin-bottom: 20px;
   animation: comenzarConBrillo 4s linear infinite;
+  margin-top: 20px;
+  margin-bottom: 40px;
+
 }
 
 @keyframes comenzarConBrillo {
@@ -62,22 +63,18 @@ li {
 
 .game-return-btn,
 .replay {
-  background-color: #0026fc;
-  color: rgb(251, 255, 0);
+  background-color: #a119db;
+  color: #ffffff;
   border: none;
-  padding: 10px 60px;
+  padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-<<<<<<< HEAD
-  font-size: 15px;
-=======
   font-size: 13px;
->>>>>>> 6b70d25b7152577a5094f9f59244731ab23a6630
   font-family: "Press Start 2P";
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.3);
   transition: transform 0.2s, box-shadow 0.2s;
-  margin-left: 25px;
-  margin-right: 25px;
+  margin-left: 13px;
+  margin-right: 13px;
   /* color: rgb(0, 0, 163);
   width: 150px;
   border: 1px solid #e4d9ff;
@@ -113,7 +110,6 @@ li {
 }
 
 .game-container {
-  padding: 40px;
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
@@ -127,14 +123,13 @@ li {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  max-width: 00px;
+  max-width: 600px;
   min-height: 600px;
 }
-
 .pointer {
   margin: 10vh 18vh 0;
   font-size: 0.9rem;
-  color: rgb(17, 255, 0);
+  color: rgb(238, 208, 109);
 }
 .card {
   list-style: none;
@@ -240,10 +235,10 @@ li {
 }
 
 .tiempo, .timer {
-  border: 2px black solid;
+  border: 1.5px black solid;
   color: antiquewhite;
-  padding: 7px;
-  box-shadow: 0 0 50px rgb(26, 251, 22);
+  padding: 5px;
+  box-shadow: 0 0 50px rgb(26, 251, 22)
 }
 
 .moves-selector{
@@ -252,7 +247,6 @@ li {
   padding: 5px;
   box-shadow: 0 0 50px rgb(26, 251, 22);
   margin-bottom: 20px;
-
 }
 
 /*****************************************************************************************************************************/
@@ -262,20 +256,13 @@ li {
 /* HORIZONTAL */
 
 @media screen and (min-width: 481px) and (max-width: 767px) and (orientation: landscape) {
-<<<<<<< HEAD
   .game-return-btn, .replay {
     font-size: 10px;
     padding: 7px;
     margin-top: 15px;
-=======
-  .game-return-btn {
-    font-size: 7px;
-    padding: 0;
->>>>>>> 6b70d25b7152577a5094f9f59244731ab23a6630
   }
 
   .game-start-btn {
-<<<<<<< HEAD
     font-size: 11px;
     padding: 10px;
     animation: comenzarConBrillo 4s linear infinite;
@@ -291,26 +278,18 @@ li {
     100% {
       box-shadow: 0 0 120px #ff0000, 0 0 20px #ffea00, 0 0 30px #1e00ff;
     }
-=======
-    font-size: 10px;
-    padding: 0;
-  }
-  .replay {
-    font-size: 7px;
-    padding: 0;
->>>>>>> 6b70d25b7152577a5094f9f59244731ab23a6630
   }
 
   .pointer {
     font-size: 10px;
-    padding: 0px;
+    padding: 0;
     color: rgb(17, 255, 0);
   }
 
   .card {
     list-style: none;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     margin: 0.5em;
     display: flex;
     justify-content: center;
@@ -342,11 +321,10 @@ li {
     min-height: 300px;
   }
   .moji {
-    font-size: 2.5rem;
-    line-height: 2.9rem;
+    font-size: 3rem;
+    line-height: 1.2;
     text-align: center;
   }
-<<<<<<< HEAD
 
   .tiempo, .timer {
     border: 1.5px black solid;
@@ -364,34 +342,19 @@ li {
 
   }
 }
-=======
-  .game-container {
-    padding: 10px;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: baseline;
-  }
-}
-/***** VERTICAL ****/
->>>>>>> 6b70d25b7152577a5094f9f59244731ab23a6630
 
 @media screen and (min-width: 320px) and (max-width: 480px) and (orientation: portrait) {
   .game-return-btn {
     font-size: 7px;
     padding: 0;
-    margin: 0;
   }
   .game-start-btn {
     font-size: 6px;
     padding: 0;
-    margin: 0;
   }
   .replay {
     font-size: 6px;
     padding: 0;
-    margin: 0;
   }
   .pointer {
     font-size: 12px;
@@ -399,11 +362,10 @@ li {
     color: rgb(17, 255, 0);
     margin-top: 35px;
   }
-
   .card {
     list-style: none;
-    width: 50px;
-    height: 50px;
+    width: 65px;
+    height: 65px;
     margin: 0.5em;
     display: flex;
     justify-content: center;
@@ -431,15 +393,14 @@ li {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    max-width: 350px;
-    min-height: 250px;
+    max-width: 345px;
+    min-height: 345px;
   }
   .moji {
-    font-size: 2.5rem;
-    line-height: 2.9rem;
+    font-size: 3rem;
+    line-height: 1.2;
     text-align: center;
   }
-<<<<<<< HEAD
 
   .tiempo, .timer {
     border: 1.5px black solid;
@@ -482,14 +443,3 @@ li {
     margin-top: 15px;
   }
 }
-=======
-  .game-container {
-    padding: 10px;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: baseline;
-  }
-}
->>>>>>> 6b70d25b7152577a5094f9f59244731ab23a6630
